Going through no-veg scenarios

--- a/VTUF-3DDesign.tex
+++ b/VTUF-3DDesign.tex
@@ -670,91 +670,88 @@ The validation period contained a range of conditions. The period especially fea
 
 \subsection{Validation approach}\label{sec:prvalresults}
 
-During this validation, a number of different scenarios (described in Table \ref{tab:simscompared}) are considered and compared. The validation scenario (named Pr04Val) compares the modelled results for the 30 day run with the observed fluxes ($Q^{*}$, $Q_{H}$, $Q_{G}$, and $Q_{E}$) for the domain that aligns well with the land surface classification for the wider local scale area (Table \ref{tab:expertValues}). In addition, the VTUF-3D model was run with a no vegetation scenario, undertaken to demonstrate the significant improvement of the model. This scenario (named Pr04NoVeg), will represent an unimproved TUF-3D without vegetation modelling capability, as the lack of vegetation will not trigger any of the new logic and improvements added to the model. This will allow an analysis of level of improvement of VTUF-3D modelling over the previous TUF-3D model. As discussed earlier in this section, the Intercomparison project \citep{Grimmond2011} found that models without vegetation were among the poorest performers. Finally, as the observations used in this validation are the same as in Phase 4 of the Intercomparison project \citep{Best2012}, using the \cite{Coutts2007} Preston dataset, the performance of the VTUF-3D model can also be placed within this evaluation of urban land surface modelling schemes.
-
-
-[Explain what ]. Intercomparison Phase 4 error analysis provides RMSE values for fluxes $Q^{*}$, $Q_{H}$, $Q_{G}$, and $Q_{E}$ for three classifications of urban models. These three categories are of models that do not consider vegetation, those that model vegetation using tiles[May need to elaborate a bit.], and models that integrate vegetation [Again, elaborate for reader.]into the urban area (referred to as classifications IntercomparisonNoVeg, IntercomparisonTiled, and IntercomparisonIntegrated, described in Table \ref{tab:simscompared}).
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-
-
-During this validation, a number of different scenarios (described in Table \ref{tab:simscompared}) are considered and compared. The validation scenario (named Pr04Val) compares the mo the closest approximation of a domain (at a micro-scale) which could be constructed to match the local scaled flux observations. 
-
-The first result is given in Figure \ref{fig:Preston6error}. Modelled results for the 30 day run are compared to the observed fluxes ($Q^{*}$, $Q_{H}$, $Q_{G}$, and $Q_{E}$). Error analysis of d index of agreement for the Pr04Val validation (Figure \ref{fig:Preston6error}) shows d values of 0.964, 0.652, 0.998, and 0.957 for $Q_{H}$, $Q_{E}$, $Q^{*}$, and $Q_{G}$ respectively. Error analysis of $RMSE$ (W m$^{-2}$) shows values of 40.2, 33.1, 19.0,and 52.5. 
+During this validation, a number of different scenarios (described in Table \ref{tab:simscompared}) are considered and compared. The validation scenario (named Pr04Val) compares the modelled results for the 30 day run with the observed fluxes ($Q^{*}$, $Q_{H}$, $Q_{G}$, and $Q_{E}$) for the domain that aligns well with the land surface classification for the wider local scale area (Table \ref{tab:expertValues}). In addition, the VTUF-3D model was run with a no vegetation scenario, undertaken to demonstrate the significant improvement of the model. This scenario (named Pr04NoVeg), will represent an unimproved TUF-3D without vegetation modelling capability, as the lack of vegetation will not trigger any of the new logic and improvements added to the model. This will allow an analysis of level of improvement of VTUF-3D modelling over the previous TUF-3D model. As discussed earlier in this section, the Intercomparison project \citep{Grimmond2011} found that models without vegetation were among the poorest performers. Finally, as the observations used in this validation are the same as in Phase 4 of the Intercomparison project \citep{Best2012}, using the \cite{Coutts2007} Preston dataset, the performance of the VTUF-3D model can also be placed within this evaluation of urban land surface modelling schemes. These include the 24 surface energy balance models with sufficient resolution to resolve features of and interactions in urban areas. The Intercomparison Phase 4 provide RMSE error analysis results for fluxes $Q^{*}$, $Q_{H}$, $Q_{G}$, and $Q_{E}$, grouped by three classifications of urban models. These three categories are of models that do not consider vegetation, those that model vegetation using tiles, and models that integrate vegetation into the urban area (referred to as classifications IntercomparisonNoVeg, IntercomparisonTiled, and IntercomparisonIntegrated, described in Table \ref{tab:simscompared}). These are approaches of increasing complexity where the tiled approach calculates vegetation and urban surfaces separately and the two only interact through their combined influence on variables such as temperatures. As most complex, the integrated approach allows interactions between and influences of on each other of the two elements within a timestep. VTUF-3D aligns most closely with a tiled vegetation approach.
 
 \begin{center}
 \begin{table}[!htbp]
-\caption{Preston simulations and Intercomparison project compared.\label{tab:simscompared}} 
+\caption{VTUF-3D validation scenario names and descriptions. Also, source of the three Intercomparison project result sets used to determine VTUF-3D's relative performance compared to other urban land surface models.\label{tab:simscompared}} 
 \begin{tabular}{  | p{0.30\linewidth} | p{0.70\linewidth} |  } 
 \hline \textbf{Scenario name} & \textbf{Description}  \\ \hline
 Pr04NoVeg & Baseline no-vegetation simulation with unimproved TUF-3D    \\ \hline
 Pr04Val & Preston 2004 validation scenario  \\ \hline	
-IntercomparisonNoVeg & \cite{Best2012} intercomparison performance mean of urban models that do not model vegetation, using \cite{Coutts2007} Preston dataset  \\ \hline
-IntercomparisonTiled & \cite{Best2012} intercomparison performance mean of urban models that tile vegetation, using \cite{Coutts2007} Preston dataset  \\ \hline
-IntercomparisonIntegrated & \cite{Best2012} intercomparison performance mean of urban models that integrate vegetation, using \cite{Coutts2007} Preston dataset  \\ \hline
+IntercomparisonNoVeg & \cite{Best2012} intercomparison performance mean of urban models that do not model vegetation  \\ \hline
+IntercomparisonTiled & \cite{Best2012} intercomparison performance mean of urban models that tile vegetation  \\ \hline
+IntercomparisonIntegrated & \cite{Best2012} intercomparison performance mean of urban models that integrate vegetation \\ \hline
   \end{tabular} 
 \end{table}
-\end{center}  
+\end{center}
 
+
+\section{Results}
+\subsection{Validation of VTUF-3D}
+
+Figure \ref{fig:Preston30Day4} presents the mean diurnal pattern for each component of the surface energy balance ($Q^{*}$, $Q_{H}$, $Q_{G}$, and $Q_{E}$)  over the 30 day validation period. The observed individual fluxes were aggregated into hourly averages over the 30 days and compared with the model output. VTUF-3D was able to reproduce the important dynamics of this area as seen in the component fluxes. In the observations, the $Q_{H}$ and $Q_{G}$ fluxes dominate the urban area, with modest amounts of $Q_{E}$ fluxes, peaking under 100W m$^{-2}$ during the daytime and falling to roughly zero at night-time. This was also seen in the model, with $Q_{H}$ and $Q_{G}$ dominated the surface energy balance, while $Q_{E}$ was relatively small. VTUF-3D captures closely both the magnitude and diurnal cycle of $Q_{H}$, with a slight under-prediction during the morning and a slight over-prediction during the late mornings. VTUF-3D also captures closely the cycles of $Q^{*}$. The very small divergence between the predicted and observed values can be explained through the dual sources of values of $K\downarrow$ in the forcing data, a distance of approximately 20 km between Preston and the Melbourne Airport observation site, providing varying values as a component of the calculated $Q^{*}$ which are then compared to only the Preston observations. $Q_{G}$ shows close agreement except for a slight over-prediction during the mornings, an over-prediction at mid-day, a slight over-prediction during the afternoon cooling period, and a very slight over-prediction during the evening. 
+
+
+\begin{figure}[!htbp] 
+\includegraphics[trim = 0mm 0mm 0mm 0mm, clip, scale=0.30]{images/Pr04Val-EnergyBalanceOverallAve4Plots_.png}
+\caption{(TODO MAKE FONTS BIGGER) Pr04Val run 30 day hourly average VTUF-3D flux comparisons to Preston flux observations for the period 10 February-10 March 2004, with error bars at standard deviations. \label{fig:Preston30Day4} }     
+\end{figure}
+
+
+In terms of absolute values, in 30 day monthly hourly averages, peaking daily values of $Q_{H}$ at 1300 are 314 W m$^{-2}$ in observed values compared to modelled values of 294. For the other fluxes, $Q_{E}$, $Q^{*}$, and $Q_{G}$, these values are 93 vs. 40, 621 vs. 612, and 213 vs. 266 W m$^{-2}$. An error analysis of d (index of agreement) for the Pr04Val validation (Figure 6) shows d values of 0.964, 0.652, 0.998, and 0.957 for $Q_{H}$, $Q_{E}$, $Q^{*}$, and $Q_{G}$ respectively. Error analysis of RMSE (W m$^{-2}$) shows values of 40.2, 33.1, 19.0,and 52.5. As an extension to the TUF-3D model, the addition of vegetation and associated $Q_{E}$ fluxes to VTUF-3D have created a large improvement to the model. As will be seen in the Intercomparison results (Section \ref{sec:interresults}), as well as in the results of this intercomparison project \citep{Grimmond2011,Best2012}, land surface modelling schemes that include vegetation perform better than those that do not. In addition, schemes that integrate vegetation perform better than those who use a tiling method to include the vegetation. Another important result from this intercomparison project is that $Q_{E}$ is the least well modelled flux across a range of urban land surface modelling schemes \citep{Grimmond2010}. Even the SUEWS model, which includes vegetation, as well as a very complete urban hydrology, tends to under-estimate $Q_{E}$ fluxes during day-time \citep{Jarvi2011}.
+
+
+%During this validation, a number of different scenarios (described in Table \ref{tab:simscompared}) are considered and compared. The validation scenario (named Pr04Val) compares the mo the closest approximation of a domain (at a micro-scale) which could be constructed to match the local scaled flux observations. 
+
+%The first result is given in Figure \ref{fig:Preston6error}. Modelled results for the 30 day run are compared to the observed fluxes ($Q^{*}$, $Q_{H}$, $Q_{G}$, and $Q_{E}$). Error analysis of d index of agreement for the Pr04Val validation (Figure \ref{fig:Preston6error}) shows d values of 0.964, 0.652, 0.998, and 0.957 for $Q_{H}$, $Q_{E}$, $Q^{*}$, and $Q_{G}$ respectively. Error analysis of $RMSE$ (W m$^{-2}$) shows values of 40.2, 33.1, 19.0,and 52.5. 
 
 
 \begin{figure}[!htbp]
 \includegraphics[trim = 0mm 0mm 0mm 0mm, clip, scale=0.30]{images/Pr04Val-ErrorPlots.png}
-\caption{Pr04Val scenario modelled vs. observations for $Q_{H}$, $Q_{E}$, $Q^{*}$, and $Q_{G}$ fluxes for the period 10 February-10 March 2004. \label{fig:Preston6error}}   
+\caption{(TODO MAKE FONTS BIGGER) Pr04Val scenario modelled vs. observations for $Q_{H}$, $Q_{E}$, $Q^{*}$, and $Q_{G}$ fluxes for the period 10 February-10 March 2004. \label{fig:Preston6error}}   
 \end{figure}
 
-Individual fluxes ($Q^{*}$, $Q_{H}$, $Q_{G}$, and $Q_{E}$) were aggregated into hourly averages over the 30 days and compared to the observations (Figure \ref{fig:Preston30Day4}). VTUF-3D is able to reproduce the important dynamics of this area, driven by the fluxes. In the observations, the $Q_{H}$ and $Q_{G}$ fluxes dominate the urban area, with modest amounts of $Q_{E}$ fluxes, peaking under 100W m$^{-2}$ during the daytime and falling to roughly zero at night-time. 
+%Individual fluxes ($Q^{*}$, $Q_{H}$, $Q_{G}$, and $Q_{E}$) were aggregated into hourly averages over the 30 days and compared to the observations (Figure \ref{fig:Preston30Day4}). VTUF-3D is able to reproduce the important dynamics of this area, driven by the fluxes. In the observations, the $Q_{H}$ and $Q_{G}$ fluxes dominate the urban area, with modest amounts of $Q_{E}$ fluxes, peaking under 100W m$^{-2}$ during the daytime and falling to roughly zero at night-time. 
 
 %\begin{figure}[!htbp] 
 %\includegraphics[trim = 0mm 0mm 0mm 0mm, clip, scale=0.30]{/home/kerryn/Documents/Work/VTUF-Runs/PrestonBase/Analysis/Pr04Val-EnergyBalanceOverallAve_.png}
 %\caption{Pr04Val run 30 day hourly average VTUF-3D flux comparisons to Preston flux observations for the period 10 February-10 March 2004, with error bars at observations standard deviations. \label{fig:Preston30Day}}      
 %\end{figure}
 
-\begin{figure}[!htbp] 
-\includegraphics[trim = 0mm 0mm 0mm 0mm, clip, scale=0.30]{images/Pr04Val-EnergyBalanceOverallAve4Plots_.png}
-\caption{Pr04Val run 30 day hourly average VTUF-3D flux comparisons to Preston flux observations for the period 10 February-10 March 2004, with error bars at standard deviations. \label{fig:Preston30Day4} }     
-\end{figure}
 
+%VTUF-3D captures closely both the magnitude and diurnal cycle of $Q_{H}$, with a slight under-prediction during the morning and a slight over-prediction during the late mornings. VTUF-3D also captures closely the cycles of $Q^{*}$. The very small divergence between the predicted and observed values can be explained through the dual sources of values of $K\downarrow$ in the forcing data, a distance of approximately 20 km between Preston and the Melbourne Airport observation site, providing varying values as a component of the calculated $Q^{*}$ which are then compared to only the Preston observations. $Q_{G}$ shows close agreement except for a slight over-prediction during the mornings, an over-prediction at mid-day, a slight over-prediction during the afternoon cooling period, and a very slight over-prediction during the evening.
 
+%In terms of absolute values, in 30 day monthly hourly averages, peaking daily values of $Q_{H}$ at 1300 are 314 W m$^{-2}$ in observed values compared to modelled values of 294. For the other fluxes, $Q_{E}$, $Q^{*}$, and $Q_{G}$, these values are 93 vs. 40, 621 vs. 612, and 213 vs. 266 W m$^{-2}$.
 
-VTUF-3D captures closely both the magnitude and diurnal cycle of $Q_{H}$, with a slight under-prediction during the morning and a slight over-prediction during the late mornings. VTUF-3D also captures closely the cycles of $Q^{*}$. The very small divergence between the predicted and observed values can be explained through the dual sources of values of $K\downarrow$ in the forcing data, a distance of approximately 20 km between Preston and the Melbourne Airport observation site, providing varying values as a component of the calculated $Q^{*}$ which are then compared to only the Preston observations. $Q_{G}$ shows close agreement except for a slight over-prediction during the mornings, an over-prediction at mid-day, a slight over-prediction during the afternoon cooling period, and a very slight over-prediction during the evening.
+%As an extension to the TUF-3D model, the addition of vegetation and associated $Q_{E}$ fluxes to VTUF-3D have created a large improvement to the model. As will be seen in the Intercomparison results (Section \ref{sec:interresults}), as well as in the results of this intercomparison project \citep{Grimmond2011,Best2012}, land surface modelling schemes that include vegetation perform better than those that do not. 
 
-In terms of absolute values, in 30 day monthly hourly averages, peaking daily values of $Q_{H}$ at 1300 are 314 W m$^{-2}$ in observed values compared to modelled values of 294. For the other fluxes, $Q_{E}$, $Q^{*}$, and $Q_{G}$, these values are 93 vs. 40, 621 vs. 612, and 213 vs. 266 W m$^{-2}$.
+%In addition, schemes that integrate vegetation perform better than those who use a tiling method to include the vegetation. Another important result from this intercomparison project is that $Q_{E}$ is the least well modelled flux across a range of urban land surface modelling schemes \citep{Grimmond2010}. Even the SUEWS model, which includes vegetation, as well as a very complete urban hydrology, tends to under-estimate $Q_{E}$ fluxes during day-time \citep{Jarvi2011}.
 
-As an extension to the TUF-3D model, the addition of vegetation and associated $Q_{E}$ fluxes to VTUF-3D have created a large improvement to the model. As will be seen in the Intercomparison results (Section \ref{sec:interresults}), as well as in the results of this intercomparison project \citep{Grimmond2011,Best2012}, land surface modelling schemes that include vegetation perform better than those that do not. 
+It is anticipated that the innovative method taken in this project, the first time vegetation has been tiled and incorporated into a micro-scaled surface energy balance model, will bring performance improvements over the previous version of the model which did not consider vegetation. This will be seen to be the case, shown in the the results of the Pr04NoVeg no vegetation validation scenario (Section \ref{sec:baselinenoveg}). In addition to the improved modelling performance, the addition of vegetation modelling has dramatically improved the applicability of VTUF-3D to a wide range of modelling problems. Indeed, without this addition, the main aim of this model, to determine the thermal comfort improvements due to urban vegetation and water would not be possible. 
 
-In addition, schemes that integrate vegetation perform better than those who use a tiling method to include the vegetation. Another important result from this intercomparison project is that $Q_{E}$ is the least well modelled flux across a range of urban land surface modelling schemes \citep{Grimmond2010}. Even the SUEWS model, which includes vegetation, as well as a very complete urban hydrology, tends to under-estimate $Q_{E}$ fluxes during day-time \citep{Jarvi2011}.
-
-It is anticipated that the innovative method taken in this project, the first time vegetation has been tiled and incorporated into a micro-scaled surface energy balance model, will bring performance improvements over the previous model which did not consider vegetation. This will be seen to be the case, shown in the the results of the Pr04NoVeg no vegetation validation scenario (Section \ref{sec:baselinenoveg}). 
-
-In addition to the improved modelling performance, the addition of vegetation modelling has dramatically improved the applicability of VTUF-3D to a wide range of modelling problems. Indeed, without this addition, the main aim of this model, to determine the thermal comfort improvements due to WSUD features would not be possible. 
-
-Despite these improvements to the modelling tool, the fluxes of $Q_{E}$ show some divergences from the observations. This was anticipated as there are three current limitations of VTUF-3D that can account for low $Q_{E}$ levels, and need addressing in future versions of the model. 
-
-The first is not accounting for precipitation on impervious surfaces. Many spikes of $Q_{E}$ fluxes are seen in the observations shortly after rainfall. \cite{Demuzere2014} found evaporation from impervious surfaces in urban areas after rainfall can contribute to an approximately 10\% increase of $Q_{E}$ over a two month period, while \cite{Wouters2013} found increases of 45 W m$^{-2}$ in $Q_{E}$ for up to 12 hours of daylight following rainfall. Until this portion of precipitation received is accounted for in the model, care should be taken when modelling periods which contain precipitation.
+Despite these improvements to the modelling tool, the fluxes of $Q_{E}$ show some divergences from the observations. This was anticipated as there are three current limitations of VTUF-3D that can account for low $Q_{E}$ levels, and need addressing in future versions of the model. The first is not accounting for precipitation on impervious surfaces. Many spikes of $Q_{E}$ fluxes are seen in the observations shortly after rainfall. \cite{Demuzere2014} found evaporation from impervious surfaces in urban areas after rainfall can contribute to an approximately 10\% increase of $Q_{E}$ over a two month period, while \cite{Wouters2013} found increases of 45 W m$^{-2}$ in $Q_{E}$ for up to 12 hours of daylight following rainfall. Until this portion of precipitation received is accounted for in the model, care should be taken when modelling periods which contain precipitation.
 
 %\begin{figure}[!htbp] 
 %\includegraphics[trim = 0mm 0mm 0mm 0mm, clip, scale=0.30]{/home/kerryn/Documents/Work/VTUF-Runs/PrestonBase/Analysis/Pr04Val-QeTimeseries.png}
 %\caption{Pr04Val modelled $Q_{E}$ vs. Preston $Q_{E}$ observations including observation of daily high/low temperatures and hourly rain totals for the period 10 February-10 March 2004. \label{fig:Preston30DayQe} }     
 %\end{figure}
 
-The second limitation is not accounting for irrigation. While Melbourne was under Stage 2 water restrictions during the observation/modelling period \citep{MelbourneWater2016a}, there would have been some amount of irrigation occurring to contribute to greater observed $Q_{E}$ fluxes than modelled. Estimates of household irrigation during February 2004 are of frequencies of 2.8 times a week (3.1 for only the homes which irrigate) with average irrigation flows of 16.3 LpM and average durations of 46 minutes per irrigation event \citep{Roberts2005}. This is an important limitation which needs addressing as quantifying the benefits of irrigation as part of WSUD is an intended use of this model.
-
-The third limitation is the full diversity of vegetation and trees of the modelled area are not represented in the modelled domain. Current parametrisations only include grass, brushbox, and olive trees. However, this is not a limitation in the model itself, as any type of vegetation can be plugged into the model. To overcome this deficit, more work needs to be done. Completion of each parametrisation is a time consuming process requiring numerous observations of tree physiology specifications. A standard limitation of many empirical models requiring a choice of either deciduous or evergreen vegetation does not exist in the model itself as these new vegetation types can include either, as long as the proper observations and parametrisations are completed on each type.
+The second limitation is not accounting for irrigation. While Melbourne was under Stage 2 water restrictions during the observation/modelling period \citep{MelbourneWater2016a}, there would have been some amount of irrigation occurring to contribute to greater observed $Q_{E}$ fluxes than modelled. Estimates of household irrigation during February 2004 are of frequencies of 2.8 times a week (3.1 for only the homes which irrigate) with average irrigation flows of 16.3 LpM and average durations of 46 minutes per irrigation event \citep{Roberts2005}. This is an important limitation which needs addressing as quantifying the benefits of irrigation as part of WSUD is an intended use of this model. The third limitation is the full diversity of vegetation and trees of the modelled area are not represented in the modelled domain. In this study, parametrisations were included for grass, brushbox, and olive trees. However, this is not a limitation in the model itself, as any type of vegetation can be plugged into the model. To overcome this deficit, more work needs to be done. Completion of each parametrisation is a time consuming process requiring numerous observations of tree physiology specifications. A standard limitation of many empirical models requiring a choice of either deciduous or evergreen vegetation does not exist in the model itself as these new vegetation types can include either, as long as the proper observations and parametrisations are completed on each type.
 
 
-Finally, values of $Q_{F}$, anthropogenic heat (W m$^{-2}$), are not accounted for in the VTUF-3D model, but which do contribute to the total $Q_{H}$ fluxes in the observations. Flux values for this modelling and observation period (summertime) are anticipated to contribute peaks of over 15 W m$^{-2}$ for low density cities and peaks of 30-60 W m$^{-2}$ for medium density areas \citep{Sailor2004}. In both the observations and modelling results, these unaccounted fluxes will be present in the errors for the four observed and modelled fluxes.
+Another consideration is that the under-prediction of $Q_{E}$ is likely contributing to the over-estimating of $Q_{G}$ (calculated as a residual in MAESPA vegetation tiles). An improvement in modelling of the $Q_{E}$ fluxes will likely lead to an improvement in the modelled $Q_{G}$ fluxes. Finally, values of $Q_{F}$, anthropogenic heat (W m$^{-2}$), are not accounted for in the VTUF-3D model, but which do contribute to the total $Q_{H}$ fluxes in the observations. Flux values for this modelling and observation period (summertime) are anticipated to contribute peaks of over 15 W m$^{-2}$ for low density areas of cities and peaks of 30-60 W m$^{-2}$ for medium density areas \citep{Sailor2004}. In both the observations and modelling results, these unaccounted fluxes will be present in the errors for the four observed and modelled fluxes.
 
 There will remain an amount of uncertainty in comparing the modelled results to the observations because of the nature of both. The observations were collected via a flux tower at 40m height, above the height of the urban roughness sublayer. The modelled results are the average of the fluxes from all of the urban surfaces, within the urban canyon and well within the urban roughness sublayer. While these comparisons can be done, i.e. \cite{Grimmond2011}, there remains an amount of uncertainly as they are comparing two slightly different things. 
 
-A final consideration is that the under-prediction of $Q_{E}$ is likely contributing to the over-estimating of $Q_{G}$ (calculated as a residual in MAESPA vegetation tiles). An improvement in modelling of the $Q_{E}$ fluxes will likely lead to an improvement in the modelled $Q_{G}$ fluxes. 
 
-\subsubsection{No vegetation baseline scenario}\label{sec:baselinenoveg}
 
-To demonstrate the significant improvement of the model, the VTUF-3D model was run with a no vegetation scenario. This scenario (named Pr04NoVeg), will represent an unimproved TUF-3D without vegetation modelling capability, as the lack of vegetation will not trigger any of the new logic and improvements added to the model. This will allow an analysis of level of improvement of VTUF-3D modelling over the previous TUF-3D model. As discussed earlier in this section, the Intercomparison project found that models without vegetation were among the poorest performers.
+\subsection{No vegetation scenario}\label{sec:baselinenoveg}
+
+%To demonstrate the significant improvement of the model, the VTUF-3D model was run with a no vegetation scenario. This scenario (named Pr04NoVeg), will represent an unimproved TUF-3D without vegetation modelling capability, as the lack of vegetation will not trigger any of the new logic and improvements added to the model. This will allow an analysis of level of improvement of VTUF-3D modelling over the previous TUF-3D model. As discussed earlier in this section, the Intercomparison project found that models without vegetation were among the poorest performers.
  
-These values show an improvement over the unimproved VTUF-3D model (Pr04NoVeg, shown in Figure \ref{fig:Prestonnovegerror} ). The unimproved model yields results of d of 0.906, 0.0, 0.989, and 0.877 and $RMSE$ (W m$^{-2}$) of 87.0, 47.1, 51.6, 75.9 for $Q_{H}$, $Q_{E}$, $Q^{*}$, and $Q_{G}$ respectively. As an unimproved model, $Q_{H}$ is significantly over-predicted during the afternoon and under-predicted in the evenings. Flux $Q_{G}$ is under-predicted during the afternoons. Finally, $Q_{E}$ is not implemented in the model, so cannot be predicted at all.
+ 
+Figure \ref{fig:Prestonnovegerror} presents each component of the surface energy balance for the no vegetation scenario (Pr04NoVeg). These values show an improvement over the unimproved VTUF-3D model. The unimproved model yields results of d of 0.906, 0.0, 0.989, and 0.877 and $RMSE$ (W m$^{-2}$) of 87.0, 47.1, 51.6, 75.9 for $Q_{H}$, $Q_{E}$, $Q^{*}$, and $Q_{G}$ respectively. As an unimproved model, $Q_{H}$ is significantly over-predicted during the afternoon and under-predicted in the evenings. Flux $Q_{G}$ is under-predicted during the afternoons. Finally, $Q_{E}$ is not implemented in the model, so cannot be predicted at all.
 
 
 %To complete the comparison with the unimproved TUF-3D model, fluxes for this same period for scenario Pr04NoVeg are shown (Figure \ref{fig:Prestonnoveg30day}). 
@@ -762,13 +759,14 @@ These values show an improvement over the unimproved VTUF-3D model (Pr04NoVeg, s
 
 \begin{figure}[!htbp]
 \includegraphics[trim = 0mm 0mm 0mm 0mm, clip, scale=0.30]{images/Pr04NoVeg-ErrorPlots.png}
-\caption{Pr04NoVeg scenario modelled vs. observations for $Q_{H}$, $Q_{E}$, $Q^{*}$, and $Q_{G}$ fluxes for the period 10 February-10 March 2004. \label{fig:Prestonnovegerror}}    
+\caption{(TODO REPLACE THIS WITH THE CORRECT FIGURE) Pr04NoVeg scenario modelled vs. observations for $Q_{H}$, $Q_{E}$, $Q^{*}$, and $Q_{G}$ fluxes for the period 10 February-10 March 2004. \label{fig:Prestonnovegerror}}    
 \end{figure}
 
-%\begin{figure}[!htbp]
-%\includegraphics[trim = 0mm 0mm 0mm 0mm, clip, scale=0.30]{/home/kerryn/Documents/Work/VTUF-Runs/PrestonBase/Analysis/Pr04NoVeg-EnergyBalanceOverallAve_.png}
-%\caption{Pr04NoVeg run 30 day hourly average VTUF-3D flux comparisons to Preston flux observations for the period 10 February-10 March 2004, with error bars at observations standard deviations. \label{fig:Prestonnoveg30day}}    
-%\end{figure}
+\begin{figure}[!htbp]
+\includegraphics[trim = 0mm 0mm 0mm 0mm, clip, scale=0.16]{images/Pr04Val-EnergyBalanceOverallAve_.png}
+\includegraphics[trim = 0mm 0mm 0mm 0mm, clip, scale=0.16]{images/Pr04NoVeg-EnergyBalanceOverallAve_.png}
+\caption{Pr04Val and Pr04NoVeg scenarios. 30 day hourly average VTUF-3D flux comparisons to Preston flux observations for the period 10 February-10 March 2004, with error bars at observations standard deviations. \label{fig:Prestonnoveg30day}}    
+\end{figure}
 
 
 \subsubsection{Preston validation intercomparison results and discussion}\label{sec:interresults}
